--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@rocketseat/eslint-config": "^2.1.0",
-    "@types/node": "^20.12.7",
-    "eslint": "^8.55.0",
-    "tsup": "^8.0.2",
-    "tsx": "^4.7.2",
-    "typescript": "^5.4.5"
+    "@rocketseat/eslint-config": "2.2.2",
+    "@types/node": "20.12.7",
+    "eslint": "8.57.0",
+    "tsup": "8.0.2",
+    "tsx": "4.7.2",
+    "typescript": "5.4.5"
   },
   "dependencies": {
-    "fastify": "^4.26.2"
+    "fastify": "4.26.2"
   }
 }
