--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 NODE_ENV="dev"
 PORT="3333"
-DATABASE_URL="postgressql://postgres:postgres@localhost:5432/apisolid?schema=public"
+DATABASE_URL="postgres://postgres:postgres@localhost:5432/apisolid?schema=public"
